2007-07-10  Tomas Cerha  <cerha@brailcom.org>

	* config/speechd.conf.in: Espeak module added.  Descriptions
	improved.

2007-07-09  Tomas Cerha  <cerha@brailcom.org>

	* INSTALL: Minor improvements of the "User applications" section.

2007-07-09  Lukas Loehrer  <listaddr1@gmx.net>

	* src/modules/espeak.c
	(synth_callback): Use gnit64 to hold
	temporary value to prevent integer overflow in long messages.
	Set default value of EspeakNASServer to "localhost" (fixes warning.
	(module_speak): Removed spurious <speak> tags.

2007-07-08  Hynek Hanke  <hanke@brailcom.org>

	* AUTHORS: Added Steve Holmes and Lukas Loehrer.

	* doc/ssip.texi: LIST SYNTHESIS_VOICES and SET SYNTHESIS VOICE added.

	* INSTALL: Sections reorganized. Added notes about Espeak.

	* ANNOUNCE: Updated for 0.6.3 relese.

	* NEWS: Updated for 0.6.3 relese.

	* config/speechd.conf: Added AddModule line for espeak (native) driver.

	* src/server/output.c (_output_get_voices): Check if reply is not
	null.

2007-07-08  Steve Holmes  <steve@holmesgrown.com>

	* src/modules/generic.c: GenericPunctNone, GenericPunctSome and
	GenericPunctAll: new options.

 	* config/modules/espeak-generic.conf: added 3 new punctuation
 	variables: GenericPunctNone, GenericPunctSome, and GenericPunctAll 
	
2007-07-06  Lukas Loehrer  <listaddr1@gmx.net>

	* src/modules/espeak.c: Added source file for espeak output module.

	* src/modules/Makefile.am: Added sd_espeak to list of output modules.

	* config/modules/espeak.conf: Created configuration file for espeak
	output module.

	* configure.in: Added configuration option for espeak output
	module (--with-espeak).
	
2007-07-02  Hynek Hanke  <hanke@syrr.buchal.name>

	* src/server/module.h (OutputModule): voices -- new variable.

	* src/server/module.c (load_output_module): Generate list of voices.

	* src/server/output.c (_output_get_voices): 

	* src/modules/festival.c (module_speak): Do not update synthesis_voice twice.